--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "version": "1.0.0",
   "description": "My personal website. Very basic.",
   "private": true,
-  "scripts": {},
+  "scripts": {
+    "start": "./node_modules/.bin/wrangler dev pages/functions/index.ts",
+    "test": "./node_modules/.bin/vitest run",
+    "test:watch": "./node_modules/.bin/vitest watch --coverage=false",
+    "lint": "./node_modules/.bin/eslint . --ext .ts",
+    "lint:fix": "./node_modules/.bin/eslint . --ext .ts --fix"
+  },
   "repository": {
     "type": "git",
     "url": "https://codeberg.org/AverageHelper/portfolio.git"
@@ -14,7 +20,27 @@
   ],
   "author": "Average Helper <https://codeberg.org/AverageHelper>",
   "license": "ISC",
+  "dependencies": {
+    "hono": "3.10.1"
+  },
   "devDependencies": {
+    "@cloudflare/workers-types": "4.20231025.0",
+    "@typescript-eslint/eslint-plugin": "6.11.0",
+    "@typescript-eslint/parser": "6.11.0",
+    "@vitest/coverage-istanbul": "0.34.6",
+    "eslint": "8.54.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-config-strictest": "0.8.1",
+    "eslint-plugin-deprecation": "2.0.0",
+    "eslint-plugin-file-progress": "1.3.0",
+    "eslint-plugin-import": "2.29.0",
+    "eslint-plugin-prettier": "5.0.1",
+    "eslint-plugin-promise": "6.1.1",
+    "eslint-plugin-unicorn": "49.0.0",
+    "eslint-plugin-vitest": "0.3.9",
+    "prettier": "3.1.0",
+    "typescript": "5.2.2",
+    "vitest": "0.34.6",
     "wrangler": "3.16.0"
   }
 }
