--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
 	"description": "My personal website. Very basic.",
 	"private": true,
 	"scripts": {
-		"start": "./node_modules/.bin/wrangler pages dev pages",
+		"build": "./node_modules/.bin/nunjucks ./*.njk -p templates -O nunjucks.json -o pages -s && npm run prettify",
+		"prettify": "./node_modules/.bin/prettier pages/**/*.html -w",
+		"start": "npm run build && ./node_modules/.bin/wrangler pages dev pages",
 		"lint": "./node_modules/.bin/eslint . --ext .ts",
 		"lint:fix": "./node_modules/.bin/eslint . --ext .ts --fix"
 	},
@@ -34,6 +36,7 @@
 		"eslint-plugin-prettier": "5.0.1",
 		"eslint-plugin-promise": "6.1.1",
 		"eslint-plugin-unicorn": "49.0.0",
+		"nunjucks-command": "1.1.8",
 		"prettier": "3.1.0",
 		"typescript": "5.2.2",
 		"wrangler": "3.17.1"
