--- a/.woodpecker/deploy_pages.yml
+++ b/.woodpecker/deploy_pages.yml
@@ -5,7 +5,7 @@ when:
     branch: main
   - event: push
     branch: main
-    path: [pages/**, functions/**]
+    path: [pages/**, templates/**, functions/**]
 
 steps:
   deploy:
@@ -13,5 +13,6 @@ steps:
     image: node:18
     commands:
       - npm ci
+      - npm run build
       - ./node_modules/.bin/wrangler pages deploy ./pages --project-name=$CLOUDFLARE_PROJECT_NAME
     secrets: [cloudflare_account_id, cloudflare_api_token, cloudflare_project_name]
