--- a/.github/workflows/close-pr.yml
+++ b/.github/workflows/close-pr.yml
@@ -25,5 +25,5 @@ jobs:
           GH_TOKEN: ${{ github.token }}
           PR: ${{ github.event.number }}
         run: |
-          gh pr close ${{ env.PR }} --comment "(Automated close) Please do not file pull requests here. [File on Codeberg](https://codeberg.org/AverageHelper/portfolio) instead."
+          gh pr close ${{ env.PR }} --comment "(Automated close) Please do not file pull requests here. [File at git.average.name](https://git.average.name/AverageHelper/portfolio) instead."
           gh pr lock ${{ env.PR }}
