fix(ci): Figure out why no run

--- a/.forgejo/workflows/deploy_pages.yaml
+++ b/.forgejo/workflows/deploy_pages.yaml
@@ -1,7 +1,7 @@
 on:
   push:
     branch: [main]
-    paths: [pages/**, templates/**, functions/**]
+    # paths: [pages/**, templates/**, functions/**]
   workflow_dispatch:
 
 jobs:
