--- a/.forgejo/workflows/deploy_pages.yaml
+++ b/.forgejo/workflows/deploy_pages.yaml
@@ -1,7 +1,8 @@
 on:
   push:
     branches: [main]
-    paths: [pages/**, templates/**, functions/**]
+    paths:
+      [pages/**, templates/**, functions/**, .forgejo/workflows/**, package.json, package-lock.json]
   workflow_dispatch:
 
 jobs:
@@ -23,7 +24,7 @@ jobs:
         run: npm run build
 
       - name: Publish
-        run: ./node_modules/.bin/wrangler pages deploy ./pages --project-name=$CLOUDFLARE_PROJECT_NAME --compatibility-date=2023-10-30
+        run: ./node_modules/.bin/wrangler pages deploy ./pages --project-name=$CLOUDFLARE_PROJECT_NAME
         env:
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
