feat: Use Astro to generate static site instead of Nunjucks (#3)
Nunjucks is neat, but I don't consider it a "proper" static site generator. The syntax is funky, for one thing.

TIL about [Astro](https://astro.build), which can be configured to generate static HTML and CSS at build time. It even lets me write my components in Vue or Svelte or whatever I want! Astro also comes with its own templating language that's pretty good, very clear what's build-time logic and what the browser sees, so I'm using that as-is for now.

Hopefully this makes for easier long-term maintenance while also keeping my portfolio static-first.

Reviewed-on: https://git.average.name/AverageHelper/portfolio/pulls/3
Co-authored-by: AverageHelper <me@average.name>
Co-committed-by: AverageHelper <me@average.name>

--- a/.forgejo/workflows/deploy_pages.yaml
+++ b/.forgejo/workflows/deploy_pages.yaml
@@ -2,12 +2,12 @@ on:
   push:
     branches: [main]
     paths:
-      - pages/**
-      - templates/**
-      - functions/**
       - .forgejo/workflows/**
-      - package.json
+      - functions/**
+      - public/**
+      - src/**
       - package-lock.json
+      - package.json
   workflow_dispatch:
 
 jobs:
