--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,9 @@
 		"eslint:recommended",
 		"plugin:@typescript-eslint/recommended",
 		"plugin:@typescript-eslint/recommended-requiring-type-checking",
-		"plugin:prettier/recommended"
+		"plugin:prettier/recommended",
+		"plugin:astro/recommended",
+		"plugin:jsx-a11y/recommended"
 	],
 	"plugins": [
 		"file-progress",
@@ -19,11 +21,12 @@
 		"unicorn",
 		"promise",
 		"import",
+		"jsx-a11y",
 		"@typescript-eslint"
 	],
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
-		"project": "./tsconfig.prod.json",
+		"project": "./tsconfig.json",
 		"tsconfigRootDir": "./"
 	},
 	"rules": {
@@ -56,5 +59,16 @@
 		"@typescript-eslint/consistent-type-imports": "warn",
 		"new-cap": "off", // Many decorators do not follow normal function conventions
 		"unicorn/catch-error-name": ["warn", { "name": "error" }]
-	}
+	},
+	"overrides": [
+		{
+			"files": ["*.astro"],
+			"parser": "astro-eslint-parser",
+			"parserOptions": {
+				"parser": "@typescript-eslint/parser",
+				"extraFileExtensions": [".astro"]
+			},
+			"rules": {}
+		}
+	]
 }
