--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,28 @@
 {
-  "typescript.tsdk": "node_modules/typescript/lib",
-  "editor.detectIndentation": false,
-  "editor.insertSpaces": false,
-  "todo-tree.filtering.excludeGlobs": ["**/dist/**", "**/node_modules/**", "coverage/**"],
-  "files.eol": "auto",
-  "terminal.integrated.defaultProfile.windows": "Git Bash",
-  "editor.formatOnSave": true,
-  "coverage-gutters.coverageFileNames": [
-    "clover.xml",
-    "lcov.info",
-    "cov.xml",
-    "coverage.xml",
-    "jacoco.xml",
-    "coverage.cobertura.xml"
-  ]
+	"typescript.tsdk": "node_modules/typescript/lib",
+	"editor.detectIndentation": false,
+	"editor.insertSpaces": false,
+	"todo-tree.filtering.excludeGlobs": ["**/dist/**", "**/node_modules/**", "coverage/**"],
+	"files.eol": "auto",
+	"terminal.integrated.defaultProfile.windows": "Git Bash",
+	"editor.formatOnSave": true,
+	"prettier.documentSelectors": ["**/*.astro", "**/*.ts"],
+	"eslint.validate": [
+		"javascript", // Enable .js
+		"javascriptreact", // Enable .jsx
+		"astro", // Enable .astro
+		"typescript", // Enable .ts
+		"typescriptreact" // Enable .tsx
+	],
+	"[astro]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"coverage-gutters.coverageFileNames": [
+		"clover.xml",
+		"lcov.info",
+		"cov.xml",
+		"coverage.xml",
+		"jacoco.xml",
+		"coverage.cobertura.xml"
+	]
 }
