--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
 	"description": "My personal website. Very basic.",
 	"private": true,
 	"scripts": {
-		"build": "./node_modules/.bin/nunjucks ./*.njk -p templates -O nunjucks.json -o pages -s && npm run prettify",
+		"start": "./node_modules/.bin/astro dev",
+		"build": "npm run lint && ./node_modules/.bin/astro build && npm run prettify",
 		"prettify": "./node_modules/.bin/prettier pages/**/*.html -w",
-		"start": "npm run build && ./node_modules/.bin/wrangler pages dev pages --compatibility-date=2023-10-30",
-		"lint": "./node_modules/.bin/eslint . --ext .ts",
-		"lint:fix": "./node_modules/.bin/eslint . --ext .ts --fix"
+		"preview": "npm run build && ./node_modules/.bin/wrangler pages dev pages --compatibility-date=2023-10-30",
+		"lint": "./node_modules/.bin/eslint . --ext .ts,.astro",
+		"lint:fix": "./node_modules/.bin/eslint . --ext .ts,.astro --fix"
 	},
 	"repository": {
 		"type": "git",
@@ -21,24 +22,28 @@
 	"author": "Average Helper <https://git.average.name/AverageHelper>",
 	"license": "ISC",
 	"dependencies": {
-		"hono": "3.10.1"
+		"hono": "3.12.0"
 	},
 	"devDependencies": {
+		"@astrojs/ts-plugin": "1.4.0",
 		"@cloudflare/workers-types": "4.20231025.0",
 		"@typescript-eslint/eslint-plugin": "6.11.0",
 		"@typescript-eslint/parser": "6.11.0",
+		"astro": "4.1.1",
 		"eslint": "8.54.0",
 		"eslint-config-prettier": "9.0.0",
 		"eslint-config-strictest": "0.8.1",
+		"eslint-plugin-astro": "0.31.0",
 		"eslint-plugin-deprecation": "2.0.0",
 		"eslint-plugin-file-progress": "1.3.0",
 		"eslint-plugin-import": "2.29.0",
+		"eslint-plugin-jsx-a11y": "6.8.0",
 		"eslint-plugin-prettier": "5.0.1",
 		"eslint-plugin-promise": "6.1.1",
 		"eslint-plugin-unicorn": "49.0.0",
-		"nunjucks-command": "1.1.8",
 		"prettier": "3.1.0",
+		"prettier-plugin-astro": "0.12.3",
 		"typescript": "5.2.2",
-		"wrangler": "3.17.1"
+		"wrangler": "3.22.3"
 	}
 }
