--- a/.forgejo/workflows/deploy_pages.yaml
+++ b/.forgejo/workflows/deploy_pages.yaml
@@ -29,7 +29,7 @@ jobs:
         run: npm run build
 
       - name: Publish
-        run: ./node_modules/.bin/wrangler pages deploy ./pages --project-name=$CLOUDFLARE_PROJECT_NAME
+        run: ./node_modules/.bin/wrangler pages deploy ./dist --project-name=$CLOUDFLARE_PROJECT_NAME
         env:
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
