--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"private": true,
 	"scripts": {
 		"start": "./node_modules/.bin/astro dev",
-		"build": "npm run lint && ./node_modules/.bin/astro build && npm run prettify",
+		"build": "npm run lint && ./node_modules/.bin/astro check && ./node_modules/.bin/astro build && npm run prettify",
 		"prettify": "./node_modules/.bin/prettier dist/**/*.html dist/**/*.css -w",
 		"preview": "npm run build && ./node_modules/.bin/wrangler pages dev dist --compatibility-date=2023-10-30",
 		"lint": "./node_modules/.bin/eslint . --ext .ts,.astro",
@@ -25,6 +25,7 @@
 		"hono": "3.12.0"
 	},
 	"devDependencies": {
+		"@astrojs/check": "0.4.1",
 		"@astrojs/ts-plugin": "1.4.0",
 		"@cloudflare/workers-types": "4.20231025.0",
 		"@typescript-eslint/eslint-plugin": "6.11.0",
