--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "My personal website. Very basic.",
 	"private": true,
 	"scripts": {
-		"start": "./node_modules/.bin/astro dev",
+		"start": "./node_modules/.bin/astro dev --open",
 		"build": "npm run lint && ./node_modules/.bin/astro check && rm -fr dist && ./node_modules/.bin/astro build && npm run prettify",
 		"prettify": "./node_modules/.bin/prettier dist/**/*.html dist/**/*.css -w",
 		"preview": "npm run build && ./node_modules/.bin/wrangler pages dev dist --compatibility-date=2023-10-30",
