fix: Set `CI` when running build

--- a/.forgejo/workflows/deploy_pages.yaml
+++ b/.forgejo/workflows/deploy_pages.yaml
@@ -26,7 +26,7 @@ jobs:
         run: npm ci
 
       - name: Build
-        run: npm run build
+        run: CI=true npm run build
 
       - name: Publish
         run: ./node_modules/.bin/wrangler pages deploy ./dist --project-name=$CLOUDFLARE_PROJECT_NAME
