--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@astrojs/rss": "4.0.5",
 		"@astrojs/ts-plugin": "1.4.0",
 		"@cloudflare/workers-types": "4.20231025.0",
+		"@types/markdown-it": "13.0.7",
 		"@types/sanitize-html": "2.11.0",
 		"@typescript-eslint/eslint-plugin": "6.11.0",
 		"@typescript-eslint/parser": "6.11.0",
@@ -44,6 +45,7 @@
 		"eslint-plugin-prettier": "5.0.1",
 		"eslint-plugin-promise": "6.1.1",
 		"eslint-plugin-unicorn": "49.0.0",
+		"markdown-it": "14.0.0",
 		"prettier": "3.1.0",
 		"prettier-plugin-astro": "0.12.3",
 		"rehype-external-links": "3.0.0",
