--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"css",
 		"html"
 	],
+	"type": "module",
 	"author": "Average Helper <https://git.average.name/AverageHelper>",
 	"license": "ISC",
 	"dependencies": {
