--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	"devDependencies": {
 		"@astrojs/check": "0.4.1",
 		"@astrojs/rss": "4.0.5",
+		"@astrojs/sitemap": "3.1.0",
 		"@astrojs/ts-plugin": "1.4.0",
 		"@cloudflare/workers-types": "4.20231025.0",
 		"@types/markdown-it": "13.0.7",
