--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@astrojs/sitemap": "3.1.0",
 		"@astrojs/ts-plugin": "1.4.0",
 		"@cloudflare/workers-types": "4.20231025.0",
+		"@fec/remark-a11y-emoji": "4.0.2",
 		"@types/markdown-it": "13.0.7",
 		"@types/sanitize-html": "2.11.0",
 		"@typescript-eslint/eslint-plugin": "6.11.0",
