--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
 		"prettier": "3.1.0",
 		"prettier-plugin-astro": "0.12.3",
 		"rehype-external-links": "3.0.0",
-		"sanitize-html": "2.11.0",
+		"rehype-github-alerts": "3.0.0",
+		"sanitize-html": "2.12.1",
 		"temporal-polyfill": "0.2.1",
 		"typescript": "5.2.2",
 		"wrangler": "3.22.3"
