feat: Move to own host instead of Cloudflare (#4)
## New stuff

- Use [Deno](https://deno.com)+[Hono](https://hono.dev) instead of Cloudflare Pages to serve static assets.
- Move to a VPS for hosting, Caddy for SSL.

## Why

For fun, and because I don't want to rely on Cloudflare more than I have to.

Reviewed-on: https://git.average.name/AverageHelper/portfolio/pulls/4
Co-authored-by: AverageHelper <me@average.name>
Co-committed-by: AverageHelper <me@average.name>

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
 	"root": true,
-	"ignorePatterns": ["lib", "node_modules"],
+	"ignorePatterns": ["lib", "node_modules", "functions", "vendor"], // Let Deno handle lint itself
 
 	"extends": [
 		"strictest/eslint",
