--- a/.forgejo/workflows/test.yaml
+++ b/.forgejo/workflows/test.yaml
@@ -15,8 +15,13 @@ jobs:
         with:
           node-version: 20.x
 
+      - name: Setup deno
+        uses: https://github.com/denoland/setup-deno@v1
+        with:
+          deno-version: v1.x
+
       - name: Install Dependencies
         run: npm ci
 
       - name: Build
-        run: npm run build
+        run: deno task build
