--- a/.forgejo/workflows/deploy.yaml
+++ b/.forgejo/workflows/deploy.yaml
@@ -46,15 +46,13 @@ jobs:
         run: |
           echo -e "$SSH_PRIVATE_KEY" > __TEMP_INPUT_KEY_FILE
           chmod 600 __TEMP_INPUT_KEY_FILE
-          echo -e "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          SSH_KNOWN_HOSTS: ${{ secrets.SSH_KNOWN_HOSTS }}
 
       - name: Publish to host
         shell: bash
         run: |
-          rsync -rv -e "ssh -o IdentitiesOnly=yes -v -i __TEMP_INPUT_KEY_FILE" $SOURCE "$SSH_USER"@"$SSH_HOST":~/"$TARGET"
+          rsync -rv -e "ssh -o IdentitiesOnly=yes -o StrictHostKeyChecking=no -v -i __TEMP_INPUT_KEY_FILE" $SOURCE "$SSH_USER"@"$SSH_HOST":~/"$TARGET"
         env:
           SOURCE: "dist/ functions/ vendor/ deno.jsonc deno.lock app.sh"
           SSH_USER: ${{ secrets.SSH_USER }}
@@ -64,7 +62,7 @@ jobs:
       - name: Refresh project
         shell: bash
         run: |
-          ssh -o IdentitiesOnly=yes -v -i __TEMP_INPUT_KEY_FILE "$SSH_USER"@"$SSH_HOST" "ls -la && pm2 restart $PROJECT_NAME"
+          ssh -o IdentitiesOnly=yes -o StrictHostKeyChecking=no -v -i __TEMP_INPUT_KEY_FILE "$SSH_USER"@"$SSH_HOST" "ls -la && pm2 restart $PROJECT_NAME"
         env:
           SSH_USER: ${{ secrets.SSH_USER }}
           SSH_HOST: ${{ secrets.SSH_HOST }}
