fix(deploy): Use same shell to install `rsync` as when we call it

--- a/.forgejo/workflows/deploy.yaml
+++ b/.forgejo/workflows/deploy.yaml
@@ -37,6 +37,7 @@ jobs:
         run: deno task build
 
       - name: Install rsync
+        shell: bash
         run: |
           apt update -y
           apt install rsync -y
