--- a/.forgejo/workflows/deploy.yaml
+++ b/.forgejo/workflows/deploy.yaml
@@ -37,7 +37,6 @@ jobs:
         run: deno task build
 
       - name: Install rsync
-        shell: bash
         run: |
           apt update -y
           apt install rsync -y
@@ -53,9 +52,9 @@ jobs:
       - name: Publish to host
         shell: bash
         run: |
-          rsync -rv -e "ssh -o IdentitiesOnly=yes -o StrictHostKeyChecking=no -v -i __TEMP_INPUT_KEY_FILE" $SOURCE "$SSH_USER"@"$SSH_HOST":~/"$TARGET"
+          rsync -rv --delete -e "ssh -o IdentitiesOnly=yes -o StrictHostKeyChecking=no -v -i __TEMP_INPUT_KEY_FILE" $SOURCE "$SSH_USER"@"$SSH_HOST":/home/"$SSH_USER"/"$TARGET"
         env:
-          SOURCE: "dist/ functions/ vendor/ deno.jsonc deno.lock app.sh"
+          SOURCE: "dist functions vendor deno.jsonc deno.lock app.sh"
           SSH_USER: ${{ secrets.SSH_USER }}
           SSH_HOST: ${{ secrets.SSH_HOST }}
           TARGET: ${{ vars.PROJECT_NAME }}
