--- a/deno.jsonc
+++ b/deno.jsonc
@@ -7,11 +7,11 @@
 	"vendor": true,
 	"tasks": {
 		"build": "npm run build && deno task cache",
-		"start": "deno run --cached-only --allow-read --allow-net functions/index.ts",
+		"start": "deno run --cached-only --allow-read --allow-net --no-prompt functions/index.ts",
 		"start:watch": "deno run --allow-read --allow-net --watch functions/index.ts",
 		"cache": "deno cache functions/index.ts functions/*.test.ts",
 		"dev": "sleep 3 && deno task start:watch & npm run build:watch",
-		"test": "rm -fr coverage && deno test --coverage=coverage --cached-only --allow-net && deno coverage --lcov --output=coverage/lcov.info && deno coverage",
+		"test": "rm -fr coverage && TEST_MODE=true deno test --coverage=coverage --cached-only --allow-env && deno coverage --lcov --output=coverage/lcov.info && deno coverage",
 		"test:watch": "deno test --cached-only --allow-net --watch"
 	},
 	"test": {
