--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@astrojs/sitemap": "3.1.0",
 		"@astrojs/ts-plugin": "1.4.0",
 		"@fec/remark-a11y-emoji": "4.0.2",
+		"@kindspells/astro-shield": "1.3.4",
 		"@types/markdown-it": "13.0.7",
 		"@types/sanitize-html": "2.11.0",
 		"@typescript-eslint/eslint-plugin": "6.11.0",
