--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "deno task dev",
 		"build": "./node_modules/.bin/astro sync && npm run lint && ./node_modules/.bin/astro check && rm -fr dist && ./node_modules/.bin/astro build && npm run prettify",
-		"build:watch": "./node_modules/.bin/nodemon -w \"src/**\" -e 'ts,json,astro,md' --exec 'MODE=dev ./node_modules/.bin/astro build --silent'",
+		"build:watch": "./node_modules/.bin/nodemon -w \"src/**\" -e 'ts,json,astro,md,css' --exec 'MODE=dev ./node_modules/.bin/astro build --silent'",
 		"prettify": "./node_modules/.bin/prettier 'dist/**/*.{html,css}' -w --ignore-path .prettierignore",
 		"preview": "npm run build && deno task start",
 		"lint": "./node_modules/.bin/eslint . --ext .ts,.astro",
