--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@fec/remark-a11y-emoji": "4.0.2",
 		"@kindspells/astro-shield": "1.3.4",
 		"@types/markdown-it": "13.0.7",
+		"@types/markdown-it-link-attributes": "3.0.4",
 		"@types/sanitize-html": "2.11.0",
 		"@typescript-eslint/eslint-plugin": "6.11.0",
 		"@typescript-eslint/parser": "6.11.0",
@@ -47,12 +48,14 @@
 		"eslint-plugin-promise": "6.1.1",
 		"eslint-plugin-unicorn": "49.0.0",
 		"markdown-it": "14.0.0",
+		"markdown-it-link-attributes": "4.0.1",
 		"nodemon": "3.1.0",
 		"prettier": "3.1.0",
 		"prettier-plugin-astro": "0.12.3",
 		"rehype-external-links": "3.0.0",
 		"rehype-github-alerts": "3.0.0",
 		"sanitize-html": "2.12.1",
+		"superstruct": "1.0.4",
 		"temporal-polyfill": "0.2.1",
 		"typescript": "5.2.2"
 	}
