--- a/.forgejo/workflows/deploy.yaml
+++ b/.forgejo/workflows/deploy.yaml
@@ -39,6 +39,11 @@ jobs:
       - name: Test
         run: deno task test
 
+      - name: Install rsync
+        run: |
+          apt update -y
+          apt install rsync -y
+
       - name: Prepare keys
         shell: bash
         run: |
