--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,7 +1,8 @@
 {
 	"imports": {
 		"hono": "jsr:@hono/hono@4.6.3",
-		"std/": "https://deno.land/std@0.221.0/"
+		"@std/assert": "jsr:@std/assert@1.0.6",
+		"@std/testing": "jsr:@std/testing@1.0.3"
 	},
 	"lock": "deno.lock",
 	"vendor": true,
