--- a/.forgejo/workflows/deploy.yaml
+++ b/.forgejo/workflows/deploy.yaml
@@ -28,10 +28,12 @@ jobs:
       - name: Setup deno
         uses: https://github.com/denoland/setup-deno@v1
         with:
-          deno-version: v1.43.1
+          deno-version: v2.0.1
 
       - name: Install Dependencies
-        run: npm ci
+        run: |
+          deno install
+          npm ci
 
       - name: Build
         run: deno task build
