--- a/.forgejo/workflows/test.yaml
+++ b/.forgejo/workflows/test.yaml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          deno install
+          deno install --frozen
           npm ci
 
       - name: Build
