fix: Upgrade eslint and other outdated deps

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,5 +31,5 @@
 			"@/*": ["src/*"]
 		}
 	},
-	"include": ["./*.ts", "./src/**/*.ts", "./src/**/*.astro"]
+	"include": ["./*.ts", "./*.mjs", "./src/**/*.ts", "./src/**/*.astro"]
 }
