--- a/package.json
+++ b/package.json
@@ -17,35 +17,37 @@
 		"@astrojs/rss": "4.0.11",
 		"@astrojs/sitemap": "3.2.1",
 		"@astrojs/ts-plugin": "1.10.4",
+		"@eslint/compat": "1.2.7",
+		"@eslint/eslintrc": "3.3.0",
+		"@eslint/js": "9.22.0",
 		"@fec/remark-a11y-emoji": "4.0.2",
-		"@kindspells/astro-shield": "1.3.4",
-		"@types/markdown-it": "13.0.7",
-		"@types/markdown-it-link-attributes": "3.0.4",
+		"@kindspells/astro-shield": "1.7.1",
+		"@types/eslint-plugin-jsx-a11y": "6.10.0",
+		"@types/markdown-it": "14.1.2",
+		"@types/markdown-it-link-attributes": "3.0.5",
 		"@types/sanitize-html": "2.11.0",
-		"@typescript-eslint/eslint-plugin": "6.11.0",
-		"@typescript-eslint/parser": "6.11.0",
 		"astro": "4.16.18",
-		"eslint": "8.57.1",
-		"eslint-config-prettier": "9.0.0",
+		"eslint": "9.22.0",
+		"eslint-config-prettier": "10.1.1",
 		"eslint-config-strictest": "0.8.1",
-		"eslint-plugin-astro": "1.3.0",
-		"eslint-plugin-deprecation": "2.0.0",
-		"eslint-plugin-file-progress": "1.3.0",
-		"eslint-plugin-import": "2.29.0",
-		"eslint-plugin-jsx-a11y": "6.8.0",
-		"eslint-plugin-prettier": "5.0.1",
-		"eslint-plugin-promise": "6.1.1",
-		"eslint-plugin-unicorn": "49.0.0",
-		"markdown-it": "14.0.0",
+		"eslint-plugin-astro": "1.3.1",
+		"eslint-plugin-file-progress": "3.0.1",
+		"eslint-plugin-import": "2.31.0",
+		"eslint-plugin-jsx-a11y": "6.10.2",
+		"eslint-plugin-prettier": "5.2.3",
+		"eslint-plugin-promise": "7.2.1",
+		"eslint-plugin-unicorn": "57.0.0",
+		"markdown-it": "14.1.0",
 		"markdown-it-link-attributes": "4.0.1",
-		"nodemon": "3.1.7",
-		"prettier": "3.1.0",
-		"prettier-plugin-astro": "0.12.3",
+		"nodemon": "3.1.9",
+		"prettier": "3.5.3",
+		"prettier-plugin-astro": "0.14.1",
 		"rehype-external-links": "3.0.0",
-		"rehype-github-alerts": "3.0.0",
-		"sanitize-html": "2.12.1",
-		"superstruct": "1.0.4",
-		"temporal-polyfill": "0.2.1",
-		"typescript": "5.2.2"
+		"rehype-github-alerts": "4.1.0",
+		"sanitize-html": "2.14.0",
+		"superstruct": "2.0.2",
+		"temporal-polyfill": "0.2.5",
+		"typescript": "5.8.2",
+		"typescript-eslint": "8.26.0"
 	}
 }
